チャットでのやり取りの用途とファイル名が違った為変更

--- a/view/pc/chat_exchange.html
+++ b/view/pc/chat_exchange.html
@@ -54,7 +54,7 @@
                                             <div class="commentBodyRight">
                                               <div class="commentDelete operation hiddenOperation" style="display:none">
                                                 <a href="#deleteComment_fid=17601719" class="iconLink delete" title="削除する">
-                                                  <img src="https://cybozulive.com/static/49f5cdb4ca/images/delete_white14.png" class="icon" alt="削除する" />
+                                                  <img src="" class="icon" alt="削除する" />
                                                 </a>
                                               </div>
                                             </div>
@@ -69,7 +69,7 @@
                                                 <span class="good">
                                                   <span data-url="/common/good/goodAjax" data-mode="SIMPLE" data-use-comet="TRUE">
                                                     <a href="javascript:void(0);" class="iconLink goodLinkOn" id="cbaGood-MP_CHAT-2:15547680-17601719-on" data-url="/comet/common/good/goodTurnJsonDirect">
-                                                      <img src="https://cybozulive.com/static/49f5cdb4ca/images/good14.png" alt="" class="icon" />
+                                                      <img src="" alt="" class="icon" />
                                                       <span>いいね！</span>
                                                     </a>
                                                   </span>
@@ -79,11 +79,11 @@
                                                   </span>
                                                 </span>
                                                 <a href="javascript:void(0);" id="chatRoomComment_28" class="replyChatRoomComment iconLink">
-                                                  <img src="https://cybozulive.com/static/49f5cdb4ca/images/reply14.png" alt="" class="icon" />
+                                                  <img src="" alt="" class="icon" />
                                                   <span>返信</span>
                                                 </a>
                                                 <a href="javascript:void(0);" data-url="/common/star/starTurnJsonDirect" id="cbaStar-MP_CHAT--2:15547680-17601719" class="star iconLink" data-displayLabel="true">
-                                                  <img src="https://cybozulive.com/static/49f5cdb4ca/images/star_off14.png" class="icon" alt="お気に入りに登録する" data-star="off" />
+                                                  <img src="" class="icon" alt="お気に入りに登録する" data-star="off" />
                                                   <span class="starLabel">お気に入り</span>
                                                 </a>
                                             </div>
@@ -96,7 +96,7 @@
                     <!-- 相手の投稿だとdata-createMemberIdが2になっている -->
                     <div class="chatRoomCommentBlock" data-createMemberId="2:922494" data-createMemberDisplayName="深田 拓圭" data-chatRoomId="2:15547680">
                       <div class="createMemberIcon">
-                        <img src="/49f5cdb4ca/icon/member/2:922494_2:931069_1479690565000.jpg" width="24" height="32" style="padding:0px 4px 0px 4px;" alt="" class="icon" />
+                        <img src="" width="24" height="32" style="padding:0px 4px 0px 4px;" alt="" class="icon" />
                         <div class="name">
                           <a href="/mpAddress/list?mid=2%3A922494" class="profileLb iconLink" id="profile_2:922494" title="深田 拓圭">
                             <span class="name">深田 拓圭</span>
@@ -131,7 +131,7 @@
                                 <span class="good">
                                   <span data-url="/common/good/goodAjax" data-mode="SIMPLE" data-use-comet="TRUE">
                                     <a href="javascript:void(0);" class="iconLink goodLinkOff" id="cbaGood-MP_CHAT-2:15547680-17697433-off" data-url="/comet/common/good/goodTurnJsonDirect">
-                                      <img src="https://cybozulive.com/static/49f5cdb4ca/images/good_check14.png" alt="" class="icon" />
+                                      <img src="" alt="" class="icon" />
                                       <span>いいね！</span>
                                     </a>
                                   </span>
@@ -141,11 +141,11 @@
                                   </span>
                                 </span>
                                 <a href="javascript:void(0);" id="chatRoomComment_36" class="replyChatRoomComment iconLink">
-                                  <img src="https://cybozulive.com/static/49f5cdb4ca/images/reply14.png" alt="" class="icon" />
+                                  <img src="" alt="" class="icon" />
                                   <span>返信</span>
                                 </a>
                                 <a href="javascript:void(0);" data-url="/common/star/starTurnJsonDirect" id="cbaStar-MP_CHAT--2:15547680-17697433" class="star iconLink" data-displayLabel="true">
-                                  <img src="https://cybozulive.com/static/49f5cdb4ca/images/star_off14.png" class="icon" alt="お気に入りに登録する" data-star="off" />
+                                  <img src="" class="icon" alt="お気に入りに登録する" data-star="off" />
                                   <span class="starLabel">お気に入り</span>
                                 </a>
                               </div>
@@ -157,7 +157,7 @@
                     <!-- 画像やtxtデータがある時の表示方法 -->
                     <div class="chatRoomCommentBlock" data-createMemberId="1:884608" data-createMemberDisplayName=" 牛島 淳史" data-chatRoomId="2:15547680">
                       <div class="createMemberIcon">
-                        <img src="/49f5cdb4ca/icon/member/1:884608_1:893008_1472443501000.jpg" width="24" height="32" style="padding:0px 4px 0px 4px;" alt="" class="icon" />
+                        <img src="" width="24" height="32" style="padding:0px 4px 0px 4px;" alt="" class="icon" />
                         <div class="name">
                           <a href="/mpConfiguration/profile/view" class="profileLb iconLink" id="profile_1:884608" title="牛島 淳史">
                             <span class="name">牛島 淳史</span>
@@ -173,11 +173,11 @@
                                   <div class="fileInfoList">
                                     <div>
                                       <div class="fileInfo">
-                                        <a href="/mpCabinet/downloadFileByMpTargetDirect?cid=1%3A2755763&amp;application=MP_CHAT&amp;targetId=2%3A15547680" class="iconLink download" title="ダウンロード">
+                                        <a href="" class="iconLink download" title="ダウンロード">
                                           <span>テスト確認.txt</span>
                                         </a>
                                         <a class="textFilePreviewOpen" href="javascript:void(0);" data-url="/common/file/fileViewAjax?cid=1%3A2755763&amp;application=MP_CHAT&amp;targetId=2%3A15547680">
-                                          <img src="https://cybozulive.com/static/49f5cdb4ca/images/showdown20.gif" title="ファイル内容を表示する" alt="ファイル内容を表示する" class="icon" />
+                                          <img src="" title="ファイル内容を表示する" alt="ファイル内容を表示する" class="icon" />
                                         </a>
                                         <span class="fileSize">( 1 KB )</span>
                                       </div>
@@ -187,7 +187,7 @@
                                     <div>
                                       <div class="imageContents">
                                         <a href="/common/file/fileView?cid=1%3A2755764&amp;application=MP_CHAT&amp;targetId=2%3A15547680" target="_blank" rel="noopener noreferrer">
-                                          <img width="300" height="168" src="/mpCabinet/downloadFileByMpTargetDirect?cid=1%3A2755764&amp;application=MP_CHAT&amp;targetId=2%3A15547680&amp;thumbnail=true" data-url="/common/file/imageLb?cid=1%3A2755764&amp;application=MP_CHAT&amp;targetId=2%3A15547680&amp;width=800" data-width="800" alt="" />
+                                          <img width="300" height="168" src="" data-url="/common/file/imageLb?cid=1%3A2755764&amp;application=MP_CHAT&amp;targetId=2%3A15547680&amp;width=800" data-width="800" alt="" />
                                         </a>
                                       </div>
                                       <div class="fileInfo">
@@ -203,7 +203,7 @@
                               <div class="commentBodyRight">
                                 <div class="commentDelete operation hiddenOperation" style="display:none">
                                   <a href="#deleteComment_fid=19362721" class="iconLink delete" title="削除する">
-                                    <img src="https://cybozulive.com/static/49f5cdb4ca/images/delete_white14.png" class="icon" alt="削除する" />
+                                    <img src="" class="icon" alt="削除する" />
                                   </a>
                                 </div>
                               </div>
@@ -218,7 +218,7 @@
                                 <span class="good">
                                   <span data-url="/common/good/goodAjax" data-mode="SIMPLE" data-use-comet="TRUE">
                                     <a href="javascript:void(0);" class="iconLink goodLinkOn" id="cbaGood-MP_CHAT-2:15547680-19362721-on" data-url="/comet/common/good/goodTurnJsonDirect">
-                                      <img src="https://cybozulive.com/static/49f5cdb4ca/images/good14.png" alt="" class="icon" />
+                                      <img src="" alt="" class="icon" />
                                       <span>いいね！</span>
                                     </a>
                                   </span>
@@ -228,11 +228,11 @@
                                   </span>
                                 </span>
                                 <a href="javascript:void(0);" id="chatRoomComment_49" class="replyChatRoomComment iconLink">
-                                  <img src="https://cybozulive.com/static/49f5cdb4ca/images/reply14.png" alt="" class="icon" />
+                                  <img src="" alt="" class="icon" />
                                   <span>返信</span>
                                 </a>
                                 <a href="javascript:void(0);" data-url="/common/star/starTurnJsonDirect" id="cbaStar-MP_CHAT--2:15547680-19362721" class="star iconLink" data-displayLabel="true">
-                                  <img src="https://cybozulive.com/static/49f5cdb4ca/images/star_off14.png" class="icon" alt="お気に入りに登録する" data-star="off" />
+                                  <img src="" class="icon" alt="お気に入りに登録する" data-star="off" />
                                   <span class="starLabel">お気に入り</span>
                                 </a>
                               </div>
@@ -287,10 +287,8 @@
                                 </div> -->
                             </div>
                             <!-- value値は、基本残した状態でaに埋め込む -->
-                            <!-- <input type="hidden" name="chatRoomId" value="1:14259717" /> -->
                             <!-- <input type="hidden" name="group_chat_no" value="<?=$group_chat_no?>" /> -->
                             <input type="hidden" name="group_chat_no" value="1" />
-                            <!-- <input type="hidden" id="cba_mpChatLastAccessDate" value="2018-06-29T23:43:26" /> -->
                         </div>
                     </form>
                 </div>
@@ -350,16 +348,19 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script>
-
-// ##################################################
-// ダイレクトチャット部分やり取り関係機能
-// ##################################################
-$(function() {
-  //初期表示を表示する
+  // 初期表示を表示する
   window.onload = function(){
     // ページ読み込み時に実行したい処理
     //送信する時の登録用のオブジェクトを作成する
     var senddata = new Object();
+    //登録するコメント本文を作成
+    $('textarea.commonContent').each(function(){
+      senddata[$(this).attr('id')] = $(this).val();
+    });
+    //登録するボタンの情報を作成
+    $('button[name="direct_chat_create"]').each(function(){
+      senddata[$(this).attr('id')] = $(this).val();
+    });
     //グループチャット番号で検索する
     $('input:hidden[name="group_chat_no"]').each(function(){
       senddata[$(this).attr('name')] = $(this).val();
@@ -370,13 +371,18 @@ $(function() {
     url: "library/Api/chatDirect.php",
     data: senddata,
     }).done(function (senddata) {
-      $('.chatRoomCommentBlock').after("<div id=\"new_direct_chat_comment_"+registerNum+"\"></div>");
-      $('#new_direct_chat_comment_'+registerNum).html(senddata);
-      registerNum++;
+      // $('div.chatRoomCommentBlock').after("<div id=\"new_direct_chat_comment_"+registerNum+"\"></div>");
+      // $('div.chatRoomCommentBlock').after("<div class="chatRoomCommentBlock"></div>");
+      // $('#new_direct_chat_comment_'+registerNum).html(senddata);
+      $('.chatRoomCommentListParts').html(senddata);
     }).fail(function (XMLHttpRequest, textStatus, errorThrown){
       alert(errorThrown);
     });
   }
+// ##################################################
+// ダイレクトチャット部分やり取り関係機能
+// ##################################################
+$(function() {
 
   //登録した際の投稿部分のカウント数
   var registerNum = 0;
@@ -406,8 +412,8 @@ $(function() {
     }).done(function (senddata) {
       // $('.chatRoomCommentBlock').after("<div id=\"new_direct_chat_comment_"+registerNum+"\"></div>");
       // $('#new_direct_chat_comment_'+registerNum).html(senddata);
-      html(senddata);
-      // registerNum++;
+      $('div.chatRoomCommentBlock').html(senddata);
+      registerNum++;
     }).fail(function (XMLHttpRequest, textStatus, errorThrown){
       alert(errorThrown);
     });
@@ -450,27 +456,26 @@ $(function() {
   });
 
   //削除を押した時の処理
-  $(document).on("click", 'a[id="delete_board_comment"]', function(){
+  $(document).on("click", 'a[name="delete_chat_direct_comment"]', function(){
 
       var className = $(this).attr("class");
       var arrayClass = className.split("_");
 
-      var board_comment_no = arrayClass[2];
-      var board_topic_no = arrayClass[3];
+      //やり取りテーブルの主キーを取得する
+      var direct_chat_exchange_no = arrayClass[2];
 
       var senddata = new Object();
 
       // 削除するカテゴリ情報を作成
       if(arrayClass[0]+'_'+arrayClass[1] == "delete_comment"){
-          senddata["board_topic_no"] = board_topic_no;
 
           var delFlg = false;
 
           //削除する時にポップアップを表示する
           if(window.confirm('本当に削除してもよろしいですか？')){
               $("a."+className).each(function(){
-                  senddata[$(this).attr("id")] = true;
-                  senddata["BOARD_COMMENT_NO"] = board_comment_no;
+                  senddata[$(this).attr("name")] = true;
+                  senddata["DIRECT_CHAT_EXCHANGE_NO"] = direct_chat_exchange_no;
 
               })
               var delFlg = true;
